# openglapp

./: .gitignore  .gitmodules  CMakeLists.txt
resources/: shader.frag  shader.vert
src/: controls.cpp  controls.hpp  hash.hpp  main.cpp  model.cpp  model.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
